kubernetes/helm/media/jellyfin/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.rule: "Host(`jellyfin.local`) || PathPrefix(`/jellyfin`)"
spec:
  rules:
  - host: jellyfin.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              number: 80
  - http:
      paths:
      - path: /jellyfin
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              number: 80
